--- a/theme/blackcombat/css/mobile.css
+++ b/theme/blackcombat/css/mobile.css
@@ -140,7 +140,7 @@ box-shadow:0 0 5px rgba(55,55,5,0.4);
 .sponsor_title .sponsor_first img {width:250px; max-width:250px; height:auto;}
 .sponsor_items {display:flex; flex-direction:row; flex-wrap:wrap; align-items:center; justify-content:center; gap:15px; width:auto; height:auto; margin:0; padding:25px 0 25px 0;}
 .sponsor_item {flex:0 0 calc(); display:flex; flex-direction:column; align-items:center; justify-content:center; width:auto; height:auto; margin:0; padding:0;}
-.sponsor_item_anchor {flex:0 0 auto; display:block; width:auto; height:auto; margin:0; padding:0;background-color: #FFF;}
+.sponsor_item_anchor {flex:0 0 auto; margin:0; padding:0;background-color: #FFF;width: 140px; height: 82px; display: flex; justify-content: center; align-items: center;}
 .sponsor_item_anchor img {width:100%; max-width:138px; height:auto;}
 .sponsor_bottom {display:block; width:100%; height:auto; margin:0; padding:0; text-align:center;}
 .sponsor_bottom img {width:100%; max-width:172px; height:auto;}
