* 이벤트페이지 투표기능 적용 + 관리자화면 * 선수조회수 통계시스템 적용 + 관리자화면 * 메인화면 선수검색기능 적용 * 좌석선택없는 상품(블랙아고라) 상품구현 * N12기준 좌석번호 가로, 세로 배열구현 개발 * 무통장입금, 가상계좌 삭제 * 선수상세페이지 유투브링크 적용, 경기수 많은 선수 history CSS깨지는거 수정 * 언더그라운드 뒤에표시되게 수정 * 랭킹페이지 카테고리 디자인변경 * CSS version 적용(캐시방지)

--- a/theme/blackcombat/css/mobile.css
+++ b/theme/blackcombat/css/mobile.css
@@ -54,8 +54,8 @@ body.active { overflow: hidden; }
 .mobile_nav { padding-top: 20px; }
 .mobile_nav li a { display: block; font-size: 15px; color:#FFF; text-align: center; line-height: 40px; }
 
-#gnb_open {position:relative;right:10px;margin:0;padding:0 5px;height:40px;width:40px;border:0;background-size:70%;color:#fff;background:none;font-size:2em}
-#gnb_open img {width:100%;max-width:100%;height:auto;}
+#gnb_open {position:relative;right:10px;margin:0;padding:0 5px;height:40px;width:40px;border:0;background-size:70%;color:#fff;background:none;font-size:2em; margin-bottom: 8px;}
+#gnb_open img {width:30px;}
 #gnb {display:none;background:#efefef;position:fixed;top:0;left:0;z-index:99999;width:100%;max-width:400px;height:100%;overflow-y:auto;
 -webkit-box-shadow:0 0 5px rgba(55,55,5,0.4);
 -moz-box-shadow:0 0 5px rgba(55,55,5,0.4);
