--- a/theme/blackcombat/css/mobile_ranking.css
+++ b/theme/blackcombat/css/mobile_ranking.css
@@ -2,9 +2,21 @@
 .ranking_page {  }
 .ranking_category { text-align: center; margin-bottom: 30px; }
 .ranking_category ul:after { display: block; content: ''; clear: both; }
-.ranking_category li { display: inline-block; line-height: 40px; text-align: center;  margin: 0px 15px; }
-.ranking_category li a { display: inline-block; font-family: 'Great Vibes', cursive; font-size: 30px; color:#aaa; border-bottom: 1px solid #aaa; }
-.ranking_category li a.active { color:#000000; border-bottom: 1px solid #000; }
+.ranking_category li { display: inline-block; line-height: 40px; text-align: center;  margin: 0px 5px; }
+.ranking_category li a { display: inline-block;     
+    width: 80px;
+    height: 50px;
+    font-size: 0.8rem;
+    text-align: center;
+    font-weight: bold;
+    background-color: #ffdd77;
+    border: 2px solid #777777;
+    border-radius: 7px;
+    cursor: pointer;
+    line-height: 43px;
+	color: #666;
+}
+.ranking_category li a.active { background-color: #ffba3c; color:#000000 }
 .ranking_list:after { display: block; content: ''; clear: both; }
 .ranking_list_part { background-color: rgba( 255, 255, 255, 0.3); margin-bottom: 30px; }
 .ranking_list_part_champ { padding: 10px; padding-bottom: 0px; }
