bc 13 정상결전, bc 14 엔드게임 대회개최 까지관련 정보수정 	- 재고조회 관련 로직 수정(lib/shop.lib.php) 	- 티켓 구매시 재고수량 표시안되게 변경(shop/cartupdate.php) 	- 상품 상세페이지에 관리자인경우 재고수량 표시되도록(theme/blackcombat/skin/shop/basic/item.form.skin.php) 신규기능개발 (대작업) 	- 챔피언탭 화면 및 데이터컨트롤 기능 개발 	- 이벤트 당첨자 화면 및 데이터컨트롤 기능 개발 	- 이미지처리방식 변경 (DB blob -> 파일쓰기읽기) 	- 선수관리페이지_new 개발 기능추가 (소작업) 	- 관리자화면에 경기결과 수정하는기능 추가 	- 선수 상세정보 이벤트명 클릭하면 이벤트페이지 이동 	- 이벤트페이지 채점표 띄우면 투표버튼 zindex 안맞는거 수정 	- 공석 상세정보로 들어갈경우 조회할수없다고 표시되도록 	- 랭킹에 체급별 테이블 위치변경 (언더그라운드 맨마지막으로) 	- 랭킹화면 카테고리 폰트변경 	- 영어룰북 추가

--- a/adm/css/admin.css
+++ b/adm/css/admin.css
@@ -1131,3 +1131,8 @@ input[type="text"]{max-width:200px}
 /* Styles */
 input[type="text"]{max-width:200px}
 }
+
+
+.gnb_oparea ul {
+    padding-left: unset !important;
+}
